# LoxCpp

./: .gitignore  .pre-commit-config.yaml  .replit  CMakeLists.txt  CMakelists.txt  Dockerfile  README.md  Spacefile  index.html  replit.nix  server.py  start.sh
.cache/clangd/index/: main.cpp.0DD7C3262376DBC8.idx  spdlog.h.39A7F81D2D697A32.idx
.github/workflows/: build.yml  heroku.yml
examples/: control.lox  recursion.lox  scope.lox
include/: ast.h  env.h  eval.h  logger.h  lox.h  loxclass.h  loxfun.h  object.h  operators.h  parser.h  printer.h  resolver.h  scanner.h  stringbuffer.h  token.h  utils.h
src/: CMakeLists.txt  CMakelists.txt  env.cpp  eval.cpp  lox.cpp  loxfun.cpp  main.cpp  object.cpp  parser.cpp  printer.cpp  resolver.cpp  scanner.cpp  stringbuffer.cpp  token.cpp  utils.cpp
src/tools/: CMakeLists.txt  CMakelists.txt  ast_generator.cpp  grammar.txt  statement_grammar.txt
templates/: index.html
test/: CMakeLists.txt  test_env.cpp  test_eval.cpp  test_func.cpp  test_lexer.cpp  test_parser.cpp  test_repl.cpp
